fix cart overflow

--- a/gulp/blocks/cart/_cart.scss
+++ b/gulp/blocks/cart/_cart.scss
@@ -10,7 +10,7 @@
   }
 
   &__content-wrapper {
-    padding: 20px;
+    padding: 20px 15px;
     background-color: $color-white;
     box-shadow: $box-shadow;
 
